@@ -11,6 +11,7 @@ OpenLDAP 2.4.24 Engineering
 	Fixed slapd-bdb entry cache delete failure (ITS#6577)
 	Fixed slapd-ndb to honor rootpw setting (ITS#6661)
 	Fixed slapd-meta anon retry with failed auth method (ITS#6643)
+	Fixed slapd-meta rebind proc (ITS#6665)
 	Fixed slapd-null back-config support (ITS#6624)
 	Fixed slapo-pcache callback freeing (ITS#6640)
 	Fixed slapo-pcache to ignore undefined attrs (ITS#6600)
